fixed 320 width mobile picture overflow in Sale

--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -32,8 +32,6 @@
 .sale-main-img-container {
   border: 1px solid rgba(12, 12, 12, 0.05);
   border-radius: 30px;
-  width: 335px;
-  height: 385px;
   padding: 50px;
   background-color: #f3f3f3;
   margin-bottom: 20px;
